--- a/src/style.css
+++ b/src/style.css
@@ -43,26 +43,43 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: hsl(210, 20%, 98%);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: hsl(243, 75%, 59%);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: #E5E7EB;
-  --input: #D1D5DB;
-  --ring: oklch(0.708 0 0);
+  -background: hsl(216, 33%, 99%); /* gray-50 */
+  --foreground: hsl(215, 28%, 17); /* gray-800 */
+
+  --card: hsl(240, 20%, 99%)  ;
+  --card-foreground: hsl(215 28% 17%); /* gray-800 */
+
+  --popover: hsl(216 33% 99%); /* gray-50 */
+  --popover-foreground: hsl(215 28% 17%); /* gray-800 */
+
+  --primary: hsl(243 76% 59%); /* indigo-600 */
+  --primary-foreground: hsl(231 100% 97%); /* indigo-50 */
+
+  --secondary: hsl(273 91% 66%); /* purple-500 */
+  --secondary-foreground: hsl(270 100% 99%); /* purple-50 */
+
+  --muted: hsl(215 14% 90%); /* gray-200 */
+  --muted-foreground: hsl(215 14% 34%); /* gray-600 */
+
+  --accent: hsl(266 100% 97%); /* purple-100 */
+  --accent-foreground: hsl(276 81% 56%); /* purple-600 */
+
+  --destructive: hsl(0 84% 60%); /* red-500 */
+  --destructive-foreground: hsl(0 80% 98%); /* red-50 */
+
+  --success: hsl(145 63% 45%); /* green-500 */
+  --success-foreground: hsl(138 89% 98%); /* green-50 */
+  --warning: hsl(38 92% 50%); /* amber-500 */
+  --warning-foreground: hsl(50 100% 97%); /* amber-50 */
+  --info:hsl(217 91% 60%); /* blue-500 */
+  --info-foreground: hsl(217 100% 97%); /* blue-50 */
+
+  --border: hsl(215 14% 90%); /* gray-200 */
+  --input: hsl(215 14% 90%); /* gray-200 */
+  --ring: hsl(243 76% 59%); /* indigo-600 */
+  
+  --radius: 0.5rem;
+  
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
